--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,27 @@
-RewriteEngine On
-
 # Some hosts may require you to use the `RewriteBase` directive.
 # If you need to use the `RewriteBase` directive, it should be the
 # absolute physical path to the directory that contains this htaccess file.
 #
 # RewriteBase /
+
+Options -Indexes 
+
+<FilesMatch "\.json$">
+    Deny from all
+</FilesMatch>
+
+<FilesMatch "\.lock$">
+    Deny from all
+</FilesMatch>
+
+RewriteEngine On
+
 RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteCond %{REQUEST_FILENAME} !-f
+
 RewriteRule ^ index.php [QSA,L]
+
+# Se hover o erro 403 redireciona para a home ou index da aplicação,
+# basta passar a url desejada como parametro
+ErrorDocument 403 http://localhost/mini_framework_Slim_V2/
